hphp/hack/test/typecheck/lambda/new_map_lambda.php.exp
File "new_map_lambda.php", line 24, characters 60-65:
Invalid argument (Typing[4110])
File "new_map_lambda.php", line 18, characters 36-41:
This is a value of enum MyEnum
File "new_map_lambda.php", line 22, characters 30-35:
It is incompatible with a string
File "new_map_lambda.php", line 11, characters 15-16:
  via this generic Tk
